syntax = "proto3";

import "common.proto";

package pb;

service ProcessInstance {
    rpc List(ProcessInstanceListReq) returns (ProcessInstanceListResp) {}
}

message ProcessInstanceListReq {
    string businessKey = 1;
}

message ProcessInstanceListResp {
    repeated ProcessInstanceItem items = 1;
    int64 code = 2;
    CamundaError err = 3;
}

message ProcessInstanceItem {
    string id = 1;
    string definitionId = 2;
    string businessKey = 3;
}
